src/test/let/let_infer_type.stderr
error: mismatched types
 --> src/test/let/let_infer_type.sq:5:13
  |
5 |     let a = 5;
  |             ^ expected `()`, found `i32`

